deploy: 6d91920bd80e63ea38def2ea5de45ac45581fea8

--- a/lectures/03_kanban.html
+++ b/lectures/03_kanban.html
@@ -356,6 +356,7 @@ bolts</figcaption>
 </div>
 </div>
 <h1 id="scrumban"><a class="header" href="#scrumban">scrumban</a></h1>
+<p>SCRUM and kanBAN can coexist</p>
 <div class="columns">
 <div class="column" width="50%">
 <p>Scrum contributes to scrumban:</p>
