--- a/slides/01_sdlc.html
+++ b/slides/01_sdlc.html
@@ -185,7 +185,7 @@ ones</li>
 <li>continuous collaboration and fast response to change, while the
 iterative model takes a more gradual approach, building up the final
 product over multiple iterations</li>
-<li>scrum is an agile methodology</li>
+<li>SCRUM is an agile methodology</li>
 </ul>
 </div><div class="column" style="width:50%;">
 <div class="r-stack">
@@ -241,155 +241,75 @@ provides some more detailed interpretation for the values.</p>
 </aside>
 </div>
 </section>
-<section id="principle-behind-the-agile-manifesto" class="slide level2">
-<h2>1. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Our highest priority is to satisfy the customer through early and
-continuous delivery of valuable software.</p>
-</blockquote>
-<div class="fragment">
+<section id="principles-behind-the-agile-manifesto"
+class="slide level2">
+<h2>Principles behind the Agile Manifesto</h2>
+<ol type="1">
+<li>Our highest priority is to satisfy the customer through
+<strong>early and continuous delivery of valuable
+software</strong>.</li>
+<li>Welcome changing requirements, even late in development. Agile
+processes harness change for the customer’s competitive advantage.
+<ul>
+<li><span class="text-smaller">a feedback is something that represent
+value, so change requests should be welcomed</span></li>
+<li><span class="text-smaller">from a users’ perspective: small changes
+are easier to adapt, than drastic restructurings</span></li>
+</ul></li>
+<li><strong>Deliver working software frequently</strong>, from a couple
+of weeks to a couple of months, with a preference to the shorter
+timescale.
+<ul>
+<li><span class="text-smaller">significant seep-up compared to the
+waterfall</span></li>
+</ul></li>
+<li>Business people and developers must work together daily throughout
+the project.</li>
+<li>Build projects around motivated individuals. Give them the
+environment and support they need, and trust them to get the job
+done.</li>
+<li>The most efficient and effective method of conveying information to
+and within a development team is face-to-face conversation.</li>
+</ol>
+<aside class="notes">
 <blockquote>
 <p>Release early. Release often. And listen to your customers.</p>
 <p>Eric S. Raymond: The Cathedral and the Bazaar (1997)</p>
 </blockquote>
-<aside class="notes">
-<p>The “release early, release often mantra” is quite widespread, but I
-rarely see the “listen to your customers” part. One of the main
-principle of agile is to collaborate with the customer, who should be
-involved into the development. Show them the software as soon as
-possible and ask for feedback. Feedback means there will be change
-requests.</p>
-</aside>
-</div>
-</section>
-<section id="principle-behind-the-agile-manifesto-1"
-class="slide level2">
-<h2>2. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Welcome changing requirements, even late in development.
-<span class=".fragment">Agile processes harness change for the
-customer’s competitive advantage.<span></p>
-<p><cite><a href="https://agilemanifesto.org/principles.html">Principles
-behind the Agile Manifesto</a></cite></p>
-</blockquote>
-<aside class="notes">
-<p>A feedback is something that represent value, so change requests
-should be welcomed. Satisfing the customer is good for the business.</p>
+<p>One of the main principle of agile is to collaborate with the
+customer, who should be involved into the development. Show them the
+software as soon as possible and ask for feedback. Feedback means there
+will be change requests.</p>
 </aside>
 </section>
-<section id="principle-behind-the-agile-manifesto-2"
+<section id="principles-behind-the-agile-manifesto-1"
 class="slide level2">
-<h2>3. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Deliver working software frequently, from a couple of weeks to a
-couple of months, with a preference to the shorter timescale.</p>
-</blockquote>
-<aside class="notes">
-<p>This is a significant seep-up compared to the waterfall, where it
-could even take years while the customer sees something in action. And
-if you consider this as a users’ perspective, small changes are easier
-to adapt, than drastic restructurings which are comparable to learn a
-completely new software.</p>
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-3"
-class="slide level2">
-<h2>4. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Business people and developers must work together daily throughout
-the project.</p>
-</blockquote>
-<aside class="notes">
-<p>Polarization is not good. There should not be sides, business people
-and developers must not consider the other foes. They work together for
-the same goal.</p>
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-4"
-class="slide level2">
-<h2>5. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Build projects around motivated individuals. Give them the
-environment and support they need, and trust them to get the job
-done.</p>
-</blockquote>
-</section>
-<section id="principle-behind-the-agile-manifesto-5"
-class="slide level2">
-<h2>6. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>The most efficient and effective method of conveying information to
-and within a development team is face-to-face conversation.</p>
-</blockquote>
-<aside class="notes">
-<p>While it is not untrue. I consider it outdated from some aspect.</p>
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-6"
-class="slide level2">
-<h2>7. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Working software is the primary measure of progress.</p>
-</blockquote>
-<aside class="notes">
-
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-7"
-class="slide level2">
-<h2>8. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Agile processes promote sustainable development. The sponsors,
+<h2>Principles behind the Agile Manifesto</h2>
+<ol start="7" type="1">
+<li><strong>Working software is the primary measure of
+progress.</strong></li>
+<li>Agile processes promote sustainable development. The sponsors,
 developers, and users should be able to maintain a constant pace
-indefinitely.</p>
-</blockquote>
-<aside class="notes">
-
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-8"
-class="slide level2">
-<h2>9. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Continuous attention to technical excellence and good design enhances
-agility.</p>
-</blockquote>
-<aside class="notes">
-
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-9"
-class="slide level2">
-<h2>10. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>Simplicity–the art of maximizing the amount of work not done–is
-essential.</p>
-</blockquote>
-<aside class="notes">
-
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-10"
-class="slide level2">
-<h2>11. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>The best architectures, requirements, and designs emerge from
-self-organizing teams.</p>
-</blockquote>
-<aside class="notes">
-
-</aside>
-</section>
-<section id="principle-behind-the-agile-manifesto-11"
-class="slide level2">
-<h2>12. Principle behind the Agile Manifesto</h2>
-<blockquote>
-<p>At regular intervals, the team reflects on how to become more
-effective, then tunes and adjusts its behavior accordingly.</p>
-</blockquote>
-<aside class="notes">
-
-</aside>
+indefinitely.</li>
+<li>Continuous attention to technical excellence and good design
+enhances agility.</li>
+<li><strong>Simplicity–the art of maximizing the amount of work not
+done–is essential.</strong>
+<ul>
+<li><span class="text-smaller">see KISS</span></li>
+</ul></li>
+<li>The best architectures, requirements, and designs emerge from
+<strong>self-organizing teams</strong>.
+<ul>
+<li><span class="text-smaller">self-organizing teams are a key element
+of SCRUM</span></li>
+</ul></li>
+<li>At regular intervals, the team reflects on how to become more
+effective, then tunes and adjusts its behavior accordingly.
+<ul>
+<li><span class="text-smaller">retrospectives in SCRUM</span></li>
+</ul></li>
+</ol>
 </section></section>
 <section>
 <section id="manifesto-for-software-craftsmanship"
@@ -527,14 +447,6 @@ solutions (GitHub, GitLab, Bitbucket, Gitea) all have some board
 functionalities.</p>
 </aside>
 </section></section>
-<section id="scum-kanban-scrumban" class="title-slide slide level1">
-<h1>SCUM + kanban = scrumban</h1>
-<ul>
-<li>SCRUM and kanban can coexist</li>
-<li>quite new methodology</li>
-</ul>
-</section>
-
 <section id="references" class="title-slide slide level1 unnumbered">
 <h1 class="unnumbered">references</h1>
 <div id="refs" class="references csl-bib-body" role="list">
