--- a/slides/03_kanban.html
+++ b/slides/03_kanban.html
@@ -298,6 +298,7 @@ bolts</figcaption>
 
 <section id="scrumban" class="title-slide slide level1">
 <h1>scrumban</h1>
+<p>SCRUM and kanBAN can coexist</p>
 <div class="columns">
 <div class="column" style="width:50%;">
 <p>Scrum contributes to scrumban:</p>
