--- a/lectures/01_sdlc.html
+++ b/lectures/01_sdlc.html
@@ -256,7 +256,7 @@ of the software.</p>
 <li>continuous collaboration and fast response to change, while the
 iterative model takes a more gradual approach, building up the final
 product over multiple iterations</li>
-<li>scrum is an agile methodology</li>
+<li>SCRUM is an agile methodology</li>
 </ul>
 </div>
 <div class="column" width="50%">
@@ -304,113 +304,72 @@ like gardening.</li>
 <p>There are also twelve principles behind the Agile Manifesto, that
 provides some more detailed interpretation for the values.</p>
 </div>
-<h2 id="1-principle-behind-the-agile-manifesto"><a class="header" href="#1-principle-behind-the-agile-manifesto">1. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Our highest priority is to satisfy the customer through early and
-continuous delivery of valuable software.</p>
-</blockquote>
-<p>. . .</p>
+<h2 id="principles-behind-the-agile-manifesto"><a class="header" href="#principles-behind-the-agile-manifesto">Principles behind the Agile Manifesto</a></h2>
+<ol>
+<li>Our highest priority is to satisfy the customer through <strong>early and
+continuous delivery of valuable software</strong>.</li>
+<li>Welcome changing requirements, even late in development. Agile
+processes harness change for the customer’s competitive advantage.
+<ul>
+<li><span class="text-smaller">a feedback is something that represent
+value, so change requests should be welcomed</span></li>
+<li><span class="text-smaller">from a users’ perspective: small
+changes are easier to adapt, than drastic restructurings</span></li>
+</ul>
+</li>
+<li><strong>Deliver working software frequently</strong>, from a couple of weeks to a
+couple of months, with a preference to the shorter timescale.
+<ul>
+<li><span class="text-smaller">significant seep-up compared to the
+waterfall</span></li>
+</ul>
+</li>
+<li>Business people and developers must work together daily throughout
+the project.</li>
+<li>Build projects around motivated individuals. Give them the
+environment and support they need, and trust them to get the job
+done.</li>
+<li>The most efficient and effective method of conveying information to
+and within a development team is face-to-face conversation.</li>
+</ol>
+<div class="notes">
 <blockquote>
 <p>Release early. Release often. And listen to your customers.</p>
 <p>Eric S. Raymond: The Cathedral and the Bazaar (1997)</p>
 </blockquote>
-<div class="notes">
-<p>The “release early, release often mantra” is quite widespread, but I
-rarely see the “listen to your customers” part. One of the main
-principle of agile is to collaborate with the customer, who should be
-involved into the development. Show them the software as soon as
-possible and ask for feedback. Feedback means there will be change
-requests.</p>
+<p>One of the main principle of agile is to collaborate with the customer,
+who should be involved into the development. Show them the software as
+soon as possible and ask for feedback. Feedback means there will be
+change requests.</p>
 </div>
-<h2 id="2-principle-behind-the-agile-manifesto"><a class="header" href="#2-principle-behind-the-agile-manifesto">2. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Welcome changing requirements, even late in development.
-<span class=".fragment">Agile processes harness change for the
-customer’s competitive advantage.<span></p>
-<p><cite><a href="https://agilemanifesto.org/principles.html">Principles behind the Agile
-Manifesto</a></cite></p>
-</blockquote>
-<div class="notes">
-<p>A feedback is something that represent value, so change requests should
-be welcomed. Satisfing the customer is good for the business.</p>
-</div>
-<h2 id="3-principle-behind-the-agile-manifesto"><a class="header" href="#3-principle-behind-the-agile-manifesto">3. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Deliver working software frequently, from a couple of weeks to a
-couple of months, with a preference to the shorter timescale.</p>
-</blockquote>
-<div class="notes">
-<p>This is a significant seep-up compared to the waterfall, where it could
-even take years while the customer sees something in action. And if you
-consider this as a users’ perspective, small changes are easier to
-adapt, than drastic restructurings which are comparable to learn a
-completely new software.</p>
-</div>
-<h2 id="4-principle-behind-the-agile-manifesto"><a class="header" href="#4-principle-behind-the-agile-manifesto">4. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Business people and developers must work together daily throughout the
-project.</p>
-</blockquote>
-<div class="notes">
-<p>Polarization is not good. There should not be sides, business people and
-developers must not consider the other foes. They work together for the
-same goal.</p>
-</div>
-<h2 id="5-principle-behind-the-agile-manifesto"><a class="header" href="#5-principle-behind-the-agile-manifesto">5. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Build projects around motivated individuals. Give them the environment
-and support they need, and trust them to get the job done.</p>
-</blockquote>
-<h2 id="6-principle-behind-the-agile-manifesto"><a class="header" href="#6-principle-behind-the-agile-manifesto">6. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>The most efficient and effective method of conveying information to
-and within a development team is face-to-face conversation.</p>
-</blockquote>
-<div class="notes">
-<p>While it is not untrue. I consider it outdated from some aspect.</p>
-</div>
-<h2 id="7-principle-behind-the-agile-manifesto"><a class="header" href="#7-principle-behind-the-agile-manifesto">7. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Working software is the primary measure of progress.</p>
-</blockquote>
-<div class="notes">
-</div>
-<h2 id="8-principle-behind-the-agile-manifesto"><a class="header" href="#8-principle-behind-the-agile-manifesto">8. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Agile processes promote sustainable development. The sponsors,
+<h2 id="principles-behind-the-agile-manifesto-1"><a class="header" href="#principles-behind-the-agile-manifesto-1">Principles behind the Agile Manifesto</a></h2>
+<ol start="7">
+<li><strong>Working software is the primary measure of progress.</strong></li>
+<li>Agile processes promote sustainable development. The sponsors,
 developers, and users should be able to maintain a constant pace
-indefinitely.</p>
-</blockquote>
-<div class="notes">
-</div>
-<h2 id="9-principle-behind-the-agile-manifesto"><a class="header" href="#9-principle-behind-the-agile-manifesto">9. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Continuous attention to technical excellence and good design enhances
-agility.</p>
-</blockquote>
-<div class="notes">
-</div>
-<h2 id="10-principle-behind-the-agile-manifesto"><a class="header" href="#10-principle-behind-the-agile-manifesto">10. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>Simplicity–the art of maximizing the amount of work not done–is
-essential.</p>
-</blockquote>
-<div class="notes">
-</div>
-<h2 id="11-principle-behind-the-agile-manifesto"><a class="header" href="#11-principle-behind-the-agile-manifesto">11. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>The best architectures, requirements, and designs emerge from
-self-organizing teams.</p>
-</blockquote>
-<div class="notes">
-</div>
-<h2 id="12-principle-behind-the-agile-manifesto"><a class="header" href="#12-principle-behind-the-agile-manifesto">12. Principle behind the Agile Manifesto</a></h2>
-<blockquote>
-<p>At regular intervals, the team reflects on how to become more
-effective, then tunes and adjusts its behavior accordingly.</p>
-</blockquote>
-<div class="notes">
-</div>
+indefinitely.</li>
+<li>Continuous attention to technical excellence and good design
+enhances agility.</li>
+<li><strong>Simplicity–the art of maximizing the amount of work not done–is
+essential.</strong>
+<ul>
+<li><span class="text-smaller">see KISS</span></li>
+</ul>
+</li>
+<li>The best architectures, requirements, and designs emerge from
+<strong>self-organizing teams</strong>.
+<ul>
+<li><span class="text-smaller">self-organizing teams are a key element
+of SCRUM</span></li>
+</ul>
+</li>
+<li>At regular intervals, the team reflects on how to become more
+effective, then tunes and adjusts its behavior accordingly.
+<ul>
+<li><span class="text-smaller">retrospectives in SCRUM</span></li>
+</ul>
+</li>
+</ol>
 <h1 id="manifesto-for-software-craftsmanship"><a class="header" href="#manifesto-for-software-craftsmanship">manifesto for software craftsmanship</a></h1>
 <div class="wide-quote">
 <blockquote>
@@ -528,11 +487,6 @@ paid plans - WeKan (https://wekan.github.io/) - open source, self-hosted</p>
 solutions (GitHub, GitLab, Bitbucket, Gitea) all have some board
 functionalities.</p>
 </div>
-<h1 id="scum--kanban--scrumban"><a class="header" href="#scum--kanban--scrumban">SCUM + kanban = scrumban</a></h1>
-<ul>
-<li>SCRUM and kanban can coexist</li>
-<li>quite new methodology</li>
-</ul>
 <h1 id="references"><a class="header" href="#references">references</a></h1>
 <div id="refs" class="references csl-bib-body hanging-indent"
 line-spacing="2">
